Fix : Sua test case an